Description
reactOS r74919 opens the start menu erroneously when releasing the left mouse button and not when pressing it.
Opposite to this Windows XP & 2003 open the start-menu already on pressing the button.
Furthermore our latest convenience fix to open the menu when clicking in the left-bottom-most pixel on the screen (CORE-13322) already properly reacts to button-press.
We should do the same when hitting within the actual button-rect.
StartButton.patch
is not beautiful but does the job for classic & themed.
By the way: this also should be a valid fix for CORE-13331.
Attachments
Issue Links
- duplicates
-
CORE-8958 Start menu should open when clicking the Start button on mouse down, not on mouse up
-
- Resolved
-
- relates to
-
CORE-13331 The Start button remains in focus after closing its menu
-
- Untriaged
-
-
CORE-13322 [EXPLORER] we are missing a subtle convenience hack around the start-button
-
- Resolved
-