[EXPLORER] -Open the start menu on mouse down. Patch by Joachim Henze (reactosfanboy). CORE-13375

svn path=/trunk/; revision=74965